show or hide password in edit text

--- a/app/src/main/res/layout/activity_input_password_register.xml
+++ b/app/src/main/res/layout/activity_input_password_register.xml
@@ -66,6 +66,7 @@
             android:layout_marginBottom="15dp"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
+            android:drawableRight="@drawable/ic_visibility_black_24dp"
             android:ems="10"
             android:hint="@string/lock_screen_create_passphrase"
             android:inputType="textPassword"
