--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -79,6 +79,7 @@
                             android:orientation="vertical">
 
                             <net.wrappy.im.helper.layout.AppTextView
+                                android:id="@+id/txtProfileNickname"
                                 style="@style/AppText03"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
