--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -79,7 +79,6 @@
                             android:orientation="vertical">
 
                             <net.wrappy.im.helper.layout.AppTextView
-                                android:id="@+id/txtProfileNickname"
                                 style="@style/AppText03"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
@@ -251,8 +250,8 @@
                                     android:id="@+id/spnProfile"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
-                                    android:layout_centerVertical="true"
-                                    android:visibility="gone"/>
+                                    android:layout_alignParentRight="true"
+                                    android:layout_centerVertical="true" />
                             </RelativeLayout>
 
 
@@ -277,14 +276,13 @@
                 android:orientation="vertical">
 
                 <LinearLayout
-                    android:id="@+id/lnForFriend"
+                    android:id="@+id/linearForContact"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:background="#fff"
                     android:orientation="vertical"
-                    android:padding="16dp"
-                    android:visibility="gone">
+                    android:padding="16dp">
 
                     <LinearLayout
                         android:id="@+id/lnProfileSendMessage"
@@ -301,6 +299,7 @@
                             android:src="@drawable/ic_setting_chat" />
 
                         <net.wrappy.im.helper.layout.AppTextView
+                            android:id="@+id/txtProfileSendMessage"
                             style="@style/AppText02"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -367,14 +366,13 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:id="@+id/lnForSeft"
+                    android:id="@+id/linearForSeft"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:background="#fff"
                     android:orientation="vertical"
-                    android:padding="16dp"
-                    android:visibility="gone">
+                    android:padding="16dp">
 
                     <LinearLayout
                         android:id="@+id/lnProfileChangeQuestion"
@@ -452,39 +450,6 @@
 
                     </LinearLayout>
                 </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/lnForStranger"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:background="#fff"
-                    android:orientation="vertical"
-                    android:padding="16dp"
-                    android:visibility="gone">
-
-                    <LinearLayout
-                        android:id="@+id/lnProfileAddFriend"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:src="@drawable/setting_add" />
-
-                        <net.wrappy.im.helper.layout.AppTextView
-                            style="@style/AppText02"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="16dp"
-                            android:text="@string/add_people" />
-
-                    </LinearLayout>
-
-                </LinearLayout>
-
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
