--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -79,6 +79,7 @@
                             android:orientation="vertical">
 
                             <net.wrappy.im.helper.layout.AppTextView
+                                android:id="@+id/txtProfileNickname"
                                 style="@style/AppText03"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
@@ -250,8 +251,8 @@
                                     android:id="@+id/spnProfile"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
-                                    android:layout_alignParentRight="true"
-                                    android:layout_centerVertical="true" />
+                                    android:layout_centerVertical="true"
+                                    android:visibility="gone"/>
                             </RelativeLayout>
 
 
@@ -276,13 +277,14 @@
                 android:orientation="vertical">
 
                 <LinearLayout
-                    android:id="@+id/linearForContact"
+                    android:id="@+id/lnForFriend"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:background="#fff"
                     android:orientation="vertical"
-                    android:padding="16dp">
+                    android:padding="16dp"
+                    android:visibility="gone">
 
                     <LinearLayout
                         android:id="@+id/lnProfileSendMessage"
@@ -299,7 +301,6 @@
                             android:src="@drawable/ic_setting_chat" />
 
                         <net.wrappy.im.helper.layout.AppTextView
-                            android:id="@+id/txtProfileSendMessage"
                             style="@style/AppText02"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -366,13 +367,14 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:id="@+id/linearForSeft"
+                    android:id="@+id/lnForSeft"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:background="#fff"
                     android:orientation="vertical"
-                    android:padding="16dp">
+                    android:padding="16dp"
+                    android:visibility="gone">
 
                     <LinearLayout
                         android:id="@+id/lnProfileChangeQuestion"
@@ -450,6 +452,39 @@
 
                     </LinearLayout>
                 </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/lnForStranger"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:background="#fff"
+                    android:orientation="vertical"
+                    android:padding="16dp"
+                    android:visibility="gone">
+
+                    <LinearLayout
+                        android:id="@+id/lnProfileAddFriend"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/setting_add" />
+
+                        <net.wrappy.im.helper.layout.AppTextView
+                            style="@style/AppText02"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="16dp"
+                            android:text="@string/add_people" />
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
