finish flow registration

--- a/app/src/main/res/layout/activity_input_password_login.xml
+++ b/app/src/main/res/layout/activity_input_password_login.xml
@@ -7,24 +7,6 @@
     <LinearLayout
         style="@style/match_width"
         android:orientation="vertical">
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="?actionBarSize"
-            android:background="@color/menu_text_active">
-
-            <net.ironrabbit.type.CustomTypefaceTextView
-                android:id="@+id/imgLogo"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:adjustViewBounds="true"
-                android:gravity="center"
-                android:textColor="#fff"
-                android:textSize="20sp"
-                android:src="@drawable/logo_wrappy"
-                android:text="@string/login" />
-
-        </RelativeLayout>
 
 
         <net.ironrabbit.type.CustomTypefaceTextView
@@ -62,17 +44,18 @@
             android:orientation="vertical"
             android:gravity="bottom">
             <net.ironrabbit.type.CustomTypefaceButton
-                android:id="@+id/btcreatepassword"
+                android:id="@+id/btnlogin"
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center|bottom"
                 android:layout_marginBottom="10dp"
                 android:layout_marginTop="25dp"
                 android:background="@drawable/regbtn_states"
-                android:text="@string/create_new_password"
+                android:text="@string/btn_next"
                 android:textColor="#fff" />
 
             <net.ironrabbit.type.CustomTypefaceTextView
+                android:id="@+id/btnforgetpass"
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center|bottom"
