+ finish task registration

--- a/app/src/main/res/layout/activity_input_password_login.xml
+++ b/app/src/main/res/layout/activity_input_password_login.xml
@@ -9,33 +9,48 @@
         android:orientation="vertical">
 
 
-        <net.ironrabbit.type.CustomTypefaceTextView
+        <net.wrappy.im.helper.layout.AppTextView
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center"
-            android:layout_marginBottom="25dp"
+            android:layout_marginBottom="20dp"
             android:layout_marginTop="25dp"
             android:textColor="#444344"
             android:textSize="22sp"
             android:text="@string/input_your_password" />
 
-
-
-        <net.ironrabbit.type.CustomTypefaceEditText
-            android:id="@+id/edtpassword"
-            android:layout_width="match_parent"
+        <net.wrappy.im.helper.layout.AppTextView
+            android:id="@+id/tvCountdownTime"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:drawableLeft="@drawable/ic_visibility_black_24dp"
-            android:ems="10"
-            android:hint="@string/input_your_password"
-            android:inputType="textPassword"
-            android:paddingBottom="10dp"
-            android:paddingLeft="5dp"
-            android:paddingTop="10dp"
-            android:textColor="#444344" />
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:layout_marginBottom="25dp"
+            android:textColor="#444344"
+            android:textSize="22sp" />
+
+
+<FrameLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+    <net.wrappy.im.helper.layout.AppEditTextView
+        android:id="@+id/edtpassword"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:drawableRight="@drawable/ic_visibility_black_24dp"
+        android:ems="10"
+        android:hint="@string/input_your_password"
+        android:inputType="textPassword"
+        android:paddingBottom="10dp"
+        android:paddingLeft="5dp"
+        android:paddingTop="10dp"
+        android:textColor="#444344" />
+</FrameLayout>
+
+
 
 
         <LinearLayout
@@ -43,7 +58,7 @@
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:gravity="bottom">
-            <net.ironrabbit.type.CustomTypefaceButton
+            <net.wrappy.im.helper.layout.AppButton
                 android:id="@+id/btnlogin"
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
@@ -54,7 +69,7 @@
                 android:text="@string/btn_next"
                 android:textColor="#fff" />
 
-            <net.ironrabbit.type.CustomTypefaceTextView
+            <net.wrappy.im.helper.layout.AppTextView
                 android:id="@+id/btnforgetpass"
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
