--- a/app/src/main/res/layout/activity_input_password_register.xml
+++ b/app/src/main/res/layout/activity_input_password_register.xml
@@ -23,55 +23,58 @@
         <net.ironrabbit.type.CustomTypefaceTextView
             android:id="@+id/title_password"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:layout_marginBottom="15dp"
             android:layout_marginTop="15dp"
             android:background="@drawable/alert_password_wallet_background"
+            android:gravity="center_vertical"
             android:paddingLeft="15dp"
             android:text="@string/create_new_password"
             android:textColor="#444344"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:textStyle="bold" />
 
         <net.ironrabbit.type.CustomTypefaceEditText
             android:id="@+id/edtpassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
             android:drawableRight="@drawable/ic_visibility_black_24dp"
+            android:background="@android:color/transparent"
             android:ems="10"
             android:hint="@string/lock_screen_create_passphrase"
             android:inputType="textPassword"
             android:paddingBottom="10dp"
-            android:paddingLeft="5dp"
+            android:paddingLeft="15dp"
+            android:paddingRight="20dp"
             android:paddingTop="10dp"
             android:textColor="#444344" />
 
         <net.ironrabbit.type.CustomTypefaceTextView
             android:id="@+id/title_confirm_password"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:layout_marginBottom="15dp"
             android:layout_marginTop="15dp"
             android:background="@drawable/alert_password_wallet_background"
+            android:gravity="center_vertical"
             android:paddingLeft="15dp"
             android:text="@string/lock_screen_confirm_passphrase"
             android:textColor="#444344"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:textStyle="bold" />
 
         <net.ironrabbit.type.CustomTypefaceEditText
             android:id="@+id/edtconfirmpassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="15dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
             android:drawableRight="@drawable/ic_visibility_black_24dp"
             android:ems="10"
             android:hint="@string/lock_screen_create_passphrase"
             android:inputType="textPassword"
             android:paddingBottom="10dp"
-            android:paddingLeft="5dp"
+            android:paddingLeft="15dp"
+            android:paddingRight="20dp"
             android:paddingTop="10dp"
             android:textColor="#444344" />
 
