--- a/app/src/main/res/values-ja/error.xml
+++ b/app/src/main/res/values-ja/error.xml
@@ -46,7 +46,7 @@
     <string name="error_8029">報告書はすでに存在します</string>
     <string name="error_8030">報告書は存在しません。</string>
     <string name="error_8031">紹介コードは存在しません。</string>
-    <string name="error_8032">失敗したXMPPにユーザーを作成します。</string>
+    <string name="error_8032">ユーザー登録に失敗しました。時間を空けてもう一度お試しください</string>
     <string name="error_8033">予期せぬエラー、もう一度お試し下さい</string>
     <string name="error_8034">ユーザーIDまたはパターンが正しくありません</string>
     <string name="error_8035">IDもしくはパスワードが正しくありません。あと2回のミスでアカウントが3時間ロックされます</string>
