--- a/app/src/main/res/values/error.xml
+++ b/app/src/main/res/values/error.xml
@@ -46,7 +46,7 @@
     <string name="error_8029">Report already exists</string>
     <string name="error_8030">Report does not exist</string>
     <string name="error_8031">User does not exist</string>
-    <string name="error_8032">Create user on the xmpp fail</string>
+    <string name="error_8032">Create new user failed. Please try again.</string>
     <string name="error_8033">Oops! You answered the wrong security question</string>
     <string name="error_8034">The username or pattern is incorrect</string>
     <string name="error_8035">The username or password is incorrect. You have only 2 times to input again.</string>
