--- a/app/src/main/res/layout/message_view_right.xml
+++ b/app/src/main/res/layout/message_view_right.xml
@@ -77,7 +77,7 @@
                 <net.wrappy.im.helper.layout.AppTextView
                     android:id="@+id/txttranslate"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="0dp"
                     android:layout_weight="1"
                     android:padding="6dp"
                     android:text=""
@@ -85,7 +85,7 @@
 
                 <net.wrappy.im.helper.layout.AppTextView
                     android:id="@+id/btntranslate"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:padding="2dp"
                     android:textColor="@color/color_translate" />
