change layout input password

--- a/app/src/main/res/layout/activity_input_password_register.xml
+++ b/app/src/main/res/layout/activity_input_password_register.xml
@@ -8,7 +8,7 @@
         style="@style/match_width"
         android:orientation="vertical">
 
-        <net.ironrabbit.type.CustomTypefaceTextView
+        <net.wrappy.im.helper.layout.AppTextView
             android:id="@+id/tile_input_password_page"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
@@ -17,10 +17,10 @@
             android:layout_marginTop="25dp"
             android:gravity="center"
             android:text="@string/create_new_password"
-            android:textColor="#444344"
+            android:textColor="#979797"
             android:textSize="22sp" />
 
-        <net.ironrabbit.type.CustomTypefaceTextView
+        <net.wrappy.im.helper.layout.AppTextView
             android:id="@+id/title_password"
             android:layout_width="match_parent"
             android:layout_height="50dp"
@@ -34,7 +34,7 @@
             android:textSize="20sp"
             android:textStyle="bold" />
 
-        <net.ironrabbit.type.CustomTypefaceEditText
+        <net.wrappy.im.helper.layout.AppEditTextView
             android:id="@+id/edtpassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -49,7 +49,7 @@
             android:paddingTop="10dp"
             android:textColor="#444344" />
 
-        <net.ironrabbit.type.CustomTypefaceTextView
+        <net.wrappy.im.helper.layout.AppTextView
             android:id="@+id/title_confirm_password"
             android:layout_width="match_parent"
             android:layout_height="50dp"
@@ -63,7 +63,7 @@
             android:textSize="20sp"
             android:textStyle="bold" />
 
-        <net.ironrabbit.type.CustomTypefaceEditText
+        <net.wrappy.im.helper.layout.AppEditTextView
             android:id="@+id/edtconfirmpassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
