--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -166,6 +166,7 @@
                                     android:background="@null"
                                     android:hint="@string/mobile_phone"
                                     android:imeOptions="actionDone"
+                                    android:enabled="false"
                                     android:inputType="phone" />
                             </RelativeLayout>
 
