--- a/app/src/main/res/layout/activity_input_password_register.xml
+++ b/app/src/main/res/layout/activity_input_password_register.xml
@@ -39,7 +39,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@android:color/transparent"
-            android:drawableRight="@drawable/ic_visibility_black_24dp"
+            android:drawableRight="@drawable/ic_show"
             android:ems="10"
             android:hint="@string/lock_screen_create_passphrase"
             android:inputType="textPassword"
@@ -70,7 +70,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="3dp"
             android:background="@android:color/transparent"
-            android:drawableRight="@drawable/ic_visibility_black_24dp"
+            android:drawableRight="@drawable/ic_show"
             android:ems="10"
             android:hint="@string/lock_screen_create_passphrase"
             android:inputType="textPassword"
