--- a/app/src/main/res/layout/activity_input_password_login.xml
+++ b/app/src/main/res/layout/activity_input_password_login.xml
@@ -17,7 +17,7 @@
             android:layout_marginBottom="20dp"
             android:layout_marginTop="25dp"
             android:textColor="#444344"
-            android:textSize="22sp"
+            android:textSize="20sp"
             android:text="@string/input_your_password" />
 
         <net.wrappy.im.helper.layout.AppTextView
@@ -25,11 +25,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:gravity="center"
             android:layout_marginBottom="25dp"
-            android:textColor="#444344"
-            android:textSize="22sp" />
-
+            android:layout_marginTop="25dp"
+            android:gravity="center"
+            android:textColor="#979797"
+            android:textSize="17sp" />
 
 <FrameLayout
     android:layout_width="match_parent"
@@ -63,7 +63,6 @@
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center|bottom"
-                android:layout_marginBottom="10dp"
                 android:layout_marginTop="25dp"
                 android:background="@drawable/regbtn_states"
                 android:text="@string/btn_next"
@@ -71,15 +70,16 @@
 
             <net.wrappy.im.helper.layout.AppTextView
                 android:id="@+id/btnforgetpass"
-                android:layout_width="300dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center|bottom"
-                android:gravity="center"
-                android:layout_marginBottom="20dp"
+                android:layout_gravity="center"
+                android:layout_marginBottom="10dp"
                 android:layout_marginTop="10dp"
-                android:textColor="#444344"
-                android:textSize="22sp"
-                android:text="@string/forget_password" />
+                android:gravity="center"
+                android:textColor="#979797"
+                android:textSize="17sp"
+                android:text="@string/forget_password"/>
+
 
         </LinearLayout>
 
