--- a/app/src/main/res/layout/activity_input_password_register.xml
+++ b/app/src/main/res/layout/activity_input_password_register.xml
@@ -91,7 +91,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <net.ironrabbit.type.CustomTypefaceButton
+            <net.wrappy.im.helper.layout.AppButton
                 android:id="@+id/btcreatepassword"
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
