edit forget password flow screen

--- a/app/src/main/res/layout/forget_password_question_fragment.xml
+++ b/app/src/main/res/layout/forget_password_question_fragment.xml
@@ -13,7 +13,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:gravity="center"
-        android:text="@string/answer_secret_question" />
+        android:text="@string/answer_secret_question"
+        android:textColor="#979797"/>
 
     <net.wrappy.im.helper.layout.AppTextView
         android:id="@+id/txtSecurityForgetQuestion01"
