--- a/app/src/main/res/layout/forget_password_resend_link.xml
+++ b/app/src/main/res/layout/forget_password_resend_link.xml
@@ -10,29 +10,30 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:gravity="center"
-        android:text="@string/reset_your_password"/>
+        android:text="@string/reset_your_password"
+        android:textColor="#979797"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginTop="30dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp">
+        android:layout_marginTop="33dp"
+        android:layout_marginLeft="19dp"
+        android:layout_marginRight="19dp">
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_check_pink"
+            android:layout_marginRight="6dp"
             android:layout_marginTop="8dp"/>
 
         <net.wrappy.im.helper.layout.AppTextView
-            style="@style/AppText02"
-            font_type="light"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="3dp"
+            android:textSize="14sp"
             android:maxLines="3"
+            android:textColor="#4a4a4a"
             android:text="@string/receive_password_via_email" />
 
     </LinearLayout>
@@ -42,22 +43,22 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginTop="15dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp">
+        android:layout_marginLeft="19dp"
+        android:layout_marginRight="19dp">
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginRight="6dp"
             android:src="@drawable/ic_check_pink"
             android:layout_marginTop="8dp"/>
 
         <net.wrappy.im.helper.layout.AppTextView
-            style="@style/AppText02"
-            font_type="light"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="3dp"
+            android:textSize="14sp"
             android:maxLines="3"
+            android:textColor="#4a4a4a"
             android:text="@string/copy_and_paste_url" />
 
     </LinearLayout>
@@ -67,10 +68,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="53dp"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
         android:text="@string/back_to_login"
+        android:textSize="14sp"
+        android:textColor="#666666"
         android:background="@drawable/btn_border_back_to_login"/>
 
     <net.wrappy.im.helper.layout.AppButton
@@ -80,7 +83,10 @@
         android:layout_gravity="center"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
-        android:text="@string/resend_link"/>
+        android:text="@string/resend_link"
+        android:textSize="13sp"
+        android:textColor="#444344"
+        android:textAllCaps="false"/>
 
 
 </LinearLayout>
