--- a/app/src/main/res/layout/forget_password_reset_email_fragment.xml
+++ b/app/src/main/res/layout/forget_password_reset_email_fragment.xml
@@ -11,31 +11,44 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:gravity="center"
-        android:text="@string/input_your_email" />
+        android:text="@string/input_your_email"
+        android:textSize="17sp"
+        android:textColor="#979797"/>
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="30dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="30dp">
+        android:layout_height="75dp"
+        android:layout_marginBottom="79dp"
+        android:layout_marginTop="30dp"
+        android:paddingLeft="32dp"
+        android:paddingRight="32dp"
+        android:background="#f4f4f4">
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:src="@drawable/ic_email" />
+            android:src="@drawable/ic_email_1" />
 
         <net.wrappy.im.helper.layout.AppEditTextView
             android:id="@+id/edForgetPasswordEmail"
             style="@style/AppText02"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
             android:hint="@string/hint_your_email"
+            android:textColorHint="#bebebe"
             android:imeOptions="actionDone"
             android:inputType="textEmailAddress"
-            android:paddingLeft="30dp" />
+            android:paddingLeft="37dp"
+            android:background="@android:color/transparent"/>
+
+        <View
+            android:layout_width="wrap_content"
+            android:layout_height="1dp"
+            android:background="#979797"
+            android:layout_gravity="bottom"
+            android:layout_marginBottom="15dp"/>
 
     </FrameLayout>
 
@@ -50,7 +63,7 @@
         android:layout_marginTop="30dp"
         android:background="@drawable/regbtn_states"
         android:gravity="center"
-        android:text="@string/reset_password"
+        android:text="@string/otr_qa_send"
         android:textColor="@android:color/white"
         android:textStyle="bold" />
 </LinearLayout>
