fix UI bugs for new flow login , register

--- a/app/src/main/res/layout/activity_input_password_login.xml
+++ b/app/src/main/res/layout/activity_input_password_login.xml
@@ -13,12 +13,12 @@
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:gravity="center"
-            android:layout_marginBottom="20dp"
             android:layout_marginTop="25dp"
-            android:textColor="#444344"
-            android:textSize="20sp"
-            android:text="@string/input_your_password" />
+            android:gravity="center"
+            android:text="@string/input_your_password"
+            android:textColor="#979797"
+            android:textSize="20sp" />
+
 
         <net.wrappy.im.helper.layout.AppTextView
             android:id="@+id/tvCountdownTime"
@@ -26,7 +26,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginBottom="25dp"
-            android:layout_marginTop="25dp"
+            android:layout_marginTop="20dp"
             android:gravity="center"
             android:textColor="#979797"
             android:textSize="17sp" />
@@ -42,8 +42,12 @@
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
         android:layout_gravity="center"
-        android:drawableRight="@drawable/ic_visibility_black_24dp"
+        android:drawableLeft="@drawable/ic_lock_1"
+        android:drawableRight="@drawable/ic_show"
+        android:padding="5dp"
+        android:drawablePadding="5dp"
         android:ems="10"
+        android:background="@drawable/background_text_with_line"
         android:hint="@string/input_your_password"
         android:inputType="textPassword"
         android:paddingLeft="5dp"
