--- a/patternLibrary/src/main/res/layout/pl_base_pattern_activity.xml
+++ b/patternLibrary/src/main/res/layout/pl_base_pattern_activity.xml
@@ -33,7 +33,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:gravity="center|bottom"
-            android:textAppearance="?android:textAppearanceMedium" />
+            android:textAppearance="?android:textAppearanceMedium"
+            android:visibility="gone"/>
 
         <TextView
             android:id="@+id/pl_message_text_error"
